--- a/Display/display.html
+++ b/Display/display.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Display</title>
+</head>
+<body>
+    
+    <script src="script1.js"></script>
+    <p>Please input height and width of your display :</p>
+    <form action="">
+        <label for="">
+            <input type="text" id="numb1" placeholder="Введите ширину экрана">
+            <button type="button" onclick="myFunction()">Submit</button>
+            <br/><br/>
+            <input type="text" id="numb2" placeholder="Введите высоту экрана">
+            <input type="reset" value="Clear">
+        </label>
+    </form>
+    <p id="resalt"></p>
+</body>
+</html>
